--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "browserify": "^16.2.3",
     "dotenv": "^6.1.0",
     "jade": "^1.11.0",
-    "keystone": "^4.0.0"
+    "keystone": "^4.0.0",
+    "superagent": "^4.0.0"
   },
   "devDependencies": {
     "grunt": "^1.0.3",
